--- a/.github/workflows/reset-json.yml
+++ b/.github/workflows/reset-json.yml
@@ -1,14 +1,15 @@
-name: Reset JSON to base template
+name: Auto Reset JSON every 6 hours
 
 on:
-  push:
-    paths:
-      - "data.json"   # 👈 change to your JSON file name
+  schedule:
+    - cron: "0 */6 * * *"   # Runs every 6 hours
+  workflow_dispatch:        # Optional: allows manual trigger too
+
 jobs:
   reset:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Replace JSON with base template
@@ -21,7 +22,6 @@ jobs:
                   "name": "Join YoSinTV Telegram Channel",
                   "link": "https://t.me/yosintvlive"
                 }
-
               ],
               "styles": {
                 "livee": "display: flex; justify-content: center; align-items: center; text-decoration: none; color: inherit; margin: 5px 0; padding: 10px; border: 2px solid #000; border-radius: 5px; cursor: pointer; transition: box-shadow 0.3s ease; background-color: red; color: white;",
@@ -37,5 +37,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           git add data.json
-          git commit -m "Reset JSON to base template after update" || echo "No changes to commit"
+          git commit -m "Auto reset JSON to base template (6-hour schedule)" || echo "No changes to commit"
           git push
