--- a/.github/workflows/update_json.yml
+++ b/.github/workflows/update_json.yml
@@ -42,6 +42,6 @@ jobs:
           if git diff --staged --quiet; then
             echo "No changes to commit."
           else
-            git commit -m "JSON Sync Update"
+            git commit -m " API Updated - OTUA "
             git push
           fi
